--- a/client/src/components/Seen/Seen.scss
+++ b/client/src/components/Seen/Seen.scss
@@ -1,3 +1,3 @@
 .Seen {
-  height: 100%;
+  // height: 100%;
 }
