--- a/client/src/components/Watchlist/Watchlist.scss
+++ b/client/src/components/Watchlist/Watchlist.scss
@@ -1,5 +1,5 @@
 @import '../../styles/variables.scss';
 
 .Watchlist {
-  height: 100%;
+  // height: 100%;
 }
